# Gweiyser

./: .env  Cargo.toml  README.md  notes.txt
examples/: swap.rs  token.rs  uniswap.rs
src/: lib.rs  sync_pools.rs  util.rs
src/addresses/: amm_addrs.rs  mod.rs  token_addrs.rs
src/addresses/tokens/: abi.rs  mod.rs  tokens.rs
src/amms/: mod.rs
src/amms/uniswap/: mod.rs
src/amms/uniswap/v2/: factory.rs  factory_v2.rs  gen.rs  mod.rs  pool.rs  pool_v2.rs  router_v2.rs
src/protocols/: mod.rs
src/protocols/uniswap/: mod.rs
src/protocols/uniswap/v2/: factory_v2.rs  gen.rs  mod.rs  pool_v2.rs  router_v2.rs
src/protocols/uniswap/v3/: factory_v3.rs  gen.rs  mod.rs  pool.rs  pool_v3.rs  quoter.rs  router.rs  tick_lens.rs
src/token/: abi.rs  mod.rs  token.rs
