[package]
name = "gweiyser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "token"
path = "examples/token.rs"

[dependencies]
alloy = { version = "0.1.4", features = ["full"] }
alloy-contract = "0.1.4"
alloy-sol-types = "0.7.7"
tokio = { version = "1.38.0", features = ["full"] }
