[package]
name = "gweiyser"
version = "0.1.2"
edition = "2021"
description = "Swiss army knife for EVM development"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "token"
path = "examples/token.rs"

[[bin]]
name = "uniswap"
path = "examples/uniswap.rs"

[[bin]]
name = "swap"
path = "examples/swap.rs"

[dependencies]
alloy = { version = "0.2.0", features = ["full", "node-bindings"] }
alloy-contract = "0.2.0"
alloy-sol-types = "0.7.7"
anyhow = "1.0.86"
futures = "0.3.30"
pool-sync = "0.1.12"
tokio = { version = "1.39.1", features = ["full"] }
uniswap_v3_math = "0.5.1"
